Closed
Bug 217906
Opened 22 years ago
Closed 22 years ago
###!!! ASSERTION: null args: 'aNode1 && aNode2 && aResult', file i:/build/mozilla/editor/libeditor/html/nsHTMLEditRules.cpp, line 7556
Categories
(Core :: DOM: Editor, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.7alpha
People
(Reporter: timeless, Assigned: glazou)
References
()
Details
(Keywords: assertion, Whiteboard: fixinhand, has r/sr=, waiting for tree opening)
Attachments
(1 file)
1.17 KB,
patch
|
Brade
:
review+
kinmoz
:
superreview+
|
Details | Diff | Splinter Review |
viewer, cvs debug build from mid last week. i was playing w/ edit mode. i've hit
a bunch of other assertions already. this is my first editor assert.
###!!! ASSERTION: null args: 'aNode1 && aNode2 && aResult', file
i:/build/mozilla/editor/libeditor/html/nsHTMLEditRules.cpp, line 7556
Break: at file i:/build/mozilla/editor/libeditor/html/nsHTMLEditRules.cpp, line 7556
(yes localhost, sorry. it's aolserver in case people are curious).
steps: run viewer, load localhost select table stuff, flip to edit mode, press
delete.
+ aNode1 0x00000000
+ aNode2 0x0817890c
+ aResult 0x0012ed88
+ this 0x0811dc80
nsHTMLEditRules::InDifferentTableElements(nsIDOMNode * 0x00000000, nsIDOMNode *
0x0817890c, int * 0x0012ed88) line 7556 + 44 bytes
aAction 2
+ leftNode {0x00000000}
+ leftParent {0x00000000}
nsIEditor::ePrevious 2
+ rightNode {0x0817890c}
+ rightParent {0x00000000}
+ this 0x0811dc80
nsHTMLEditRules::WillDeleteSelection(nsISelection * 0x081617a0, short 2, int *
0x0012ef28, int * 0x0012ef64) line 2175 + 42 bytes
nsHTMLEditRules::WillDoAction(nsHTMLEditRules * const 0x0811dc84, nsISelection *
0x081617a0, nsRulesInfo * 0x0012ef2c, int * 0x0012ef28, int * 0x0012ef64) line
591 + 31 bytes
nsPlaintextEditor::DeleteSelection(nsPlaintextEditor * const 0x080a5080, short
2) line 863 + 59 bytes
nsTextEditorKeyListener::KeyPress(nsTextEditorKeyListener * const 0x0811c7d0,
nsIDOMEvent * 0x05eb4d14) line 203
nsEventListenerManager::HandleEvent(nsEventListenerManager * const 0x08161140,
nsIPresContext * 0x0815bdf0, nsEvent * 0x0012f9ec, nsIDOMEvent * * 0x0012f680,
nsIDOMEventTarget * 0x08155dd4, unsigned int 514, nsEventStatus * 0x0012f818)
line 1634 + 41 bytes
nsDocument::HandleDOMEvent(nsDocument * const 0x08155da0, nsIPresContext *
0x0815bdf0, nsEvent * 0x0012f9ec, nsIDOMEvent * * 0x0012f680, unsigned int 514,
nsEventStatus * 0x0012f818) line 3806
nsGenericElement::HandleDOMEvent(nsGenericElement * const 0x08157430,
nsIPresContext * 0x0815bdf0, nsEvent * 0x0012f9ec, nsIDOMEvent * * 0x0012f680,
unsigned int 519, nsEventStatus * 0x0012f818) line 2035 + 47 bytes
PresShell::HandleEventInternal(nsEvent * 0x0012f9ec, nsIView * 0x0815b660,
unsigned int 1, nsEventStatus * 0x0012f818) line 6236 + 45 bytes
PresShell::HandleEvent(PresShell * const 0x08160ce8, nsIView * 0x0815b660,
nsGUIEvent * 0x0012f9ec, nsEventStatus * 0x0012f818, int 1, int & 1) line 6106 +
25 bytes
nsViewManager::HandleEvent(nsView * 0x0815b660, nsGUIEvent * 0x0012f9ec, int 0)
line 2255
nsView::HandleEvent(nsViewManager * 0x0815b7e0, nsGUIEvent * 0x0012f9ec, int 0)
line 305
nsViewManager::DispatchEvent(nsViewManager * const 0x0815b7e0, nsGUIEvent *
0x0012f9ec, nsEventStatus * 0x0012f95c) line 2038 + 23 bytes
HandleEvent(nsGUIEvent * 0x0012f9ec) line 79
nsWindow::DispatchEvent(nsWindow * const 0x0815b564, nsGUIEvent * 0x0012f9ec,
nsEventStatus & nsEventStatus_eIgnore) line 1049 + 10 bytes
nsWindow::DispatchWindowEvent(nsGUIEvent * 0x0012f9ec) line 1070
nsWindow::DispatchKeyEvent(unsigned int 131, unsigned short 0, unsigned int 8,
long 0) line 2911 + 15 bytes
nsWindow::OnChar(unsigned int 8, unsigned int 8, unsigned char 0) line 3098
nsWindow::ProcessMessage(unsigned int 258, unsigned int 8, long 917505, long *
0x0012fe58) line 3806 + 41 bytes
nsWindow::WindowProc(HWND__ * 0x006c087a, unsigned int 258, unsigned int 8, long
917505) line 1332 + 27 bytes
USER32! SetTimer + 1077 bytes
USER32! DispatchMessageW + 278 bytes
USER32! DispatchMessageA + 11 bytes
main(int 1, char * * 0x00a141f0) line 158 + 11 bytes
mainCRTStartup() line 338 + 17 bytes
KERNEL32! SetUnhandledExceptionFilter + 92 bytes
minimal steps appear to be to have not clicked into the frame after selecting
editmode. any page seems to work.
![]() |
||
Comment 2•22 years ago
|
||
simple null check.
![]() |
||
Updated•22 years ago
|
Attachment #130692 -
Flags: superreview?(kin)
Attachment #130692 -
Flags: review?(brade)
![]() |
||
Updated•22 years ago
|
Whiteboard: fixinhand
Comment 3•22 years ago
|
||
Comment on attachment 130692 [details] [diff] [review]
patch to nsHTMLEditRules.cpp
r=brade but please remove the spaces from the blank line which you added (I
don't want to see this change in your checkin:
if (NS_FAILED(res) || bInDifTblElems) return res;
-
+
)
Attachment #130692 -
Flags: review?(brade) → review+
Comment on attachment 130692 [details] [diff] [review]
patch to nsHTMLEditRules.cpp
sr=kinmoz@netscape.net
Attachment #130692 -
Flags: superreview?(kinmoz) → superreview+
Comment 5•22 years ago
|
||
accepting bug for joe :-)
Joe--if you won't have time, reassign bug to me and I'll land it for you.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Whiteboard: fixinhand → fixinhand, has r/sr=, waiting for tree opening
Target Milestone: --- → mozilla1.7alpha
Comment 6•22 years ago
|
||
-->glazman to land for Joe
Assignee: mozeditor → daniel
Status: ASSIGNED → NEW
Assignee | ||
Comment 7•22 years ago
|
||
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•