fixes annoying assertion in the editor: b=217906, r=brade, sr=kin